crates/keron-lang/tests/corpus/errors/check/map_heterogeneous_values.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: map value type mismatch: expected `Int`, found `String`
  --> 1:23
  |
1 | val m = {"a": 1, "b": "two"}
  |                       ^^^^^
